[package]

name = "rust-postgres"
version = "0.0.0"
authors = [ "Steven Fackler <sfackler@gmail.com>" ]

[[lib]]

name = "postgres"
path = "src/lib/lib.rs"
test = false

[[test]]

name = "test"
path = "src/test/test.rs"

[dependencies.url]

git = "https://github.com/servo/rust-url"
rev = "3d54552e06062835edf8b8e3a8664272e2fdab61"

[dependencies.openssl]

git = "https://github.com/sfackler/rust-openssl"
rev = "8696b091402f67a655c3b924c118392cb67540a3"

[dependencies.phf]

git = "https://github.com/sfackler/rust-phf"
rev = "f79814a6abfa3bc5d739825643ea4ecee0a3aa8a"

[dependencies.phf_mac]

git = "https://github.com/sfackler/rust-phf"
rev = "f79814a6abfa3bc5d739825643ea4ecee0a3aa8a"
